--- a/.github/workflows/cpp-windows.yml
+++ b/.github/workflows/cpp-windows.yml
@@ -17,7 +17,6 @@ jobs:
       shell: cmd
       run: |
         choco install --no-progress -y cmake --installargs 'ADD_CMAKE_TO_PATH=System' 
-        choco install --no-progress -y llvm
         git config --global core.autocrlf false 
         git config --global core.filemode false 
 
@@ -25,7 +24,7 @@ jobs:
       shell: cmd
       run: |
           set
-          cmake -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} -DCMAKE_MAKE_PROGRAM=ninja.bat -DDETECT_OPENSSL=OFF .
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} -DDETECT_OPENSSL=OFF .
           ninja 
 
     - name: cpack
