--- a/.github/workflows/cpp-windows.yml
+++ b/.github/workflows/cpp-windows.yml
@@ -24,7 +24,7 @@ jobs:
       shell: cmd
       run: |
           set
-          cmake -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} -DDETECT_OPENSSL=OFF .
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} -DCMAKE_MAKE_PROGRAM=ninja -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang++ -DDETECT_OPENSSL=OFF .
           ninja 
 
     - name: cpack
