--- a/.github/workflows/cpp-windows.yml
+++ b/.github/workflows/cpp-windows.yml
@@ -11,19 +11,15 @@ jobs:
     runs-on: windows-latest
     
     steps:
-    - uses: actions/checkout@v3
+    - uses: actions/checkout@latest
+    - uses: lukka/get-cmake@latest      
 
-    - name: pkg
-      shell: cmd
-      run: |
-        choco install --no-progress -y cmake --installargs 'ADD_CMAKE_TO_PATH=System' 
-        git config --global core.autocrlf false 
-        git config --global core.filemode false 
 
     - name: build
       shell: cmd
       run: |
           set
+          where ninja
           cmake -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} -DCMAKE_MAKE_PROGRAM=ninja -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang++ -DDETECT_OPENSSL=OFF .
           ninja 
 
@@ -34,13 +30,13 @@ jobs:
           cpack
           echo "artifactPath=$(ls *.tar.gz)" >> $GITHUB_ENV
 
-    - uses: actions/upload-artifact@v3
+    - uses: actions/upload-artifact@latest
       with:
         name: ${{ env.artifactPath }}
         path: ${{ env.artifactPath }}
 
     - name: Release
-      uses: softprops/action-gh-release@v1
+      uses: softprops/action-gh-release@latest
       if: startsWith(github.ref, 'refs/tags/')
       with:
         files: ${{ env.artifactPath }}  
