--- a/.github/workflows/cpp-windows.yml
+++ b/.github/workflows/cpp-windows.yml
@@ -20,7 +20,7 @@ jobs:
       run: |
           set
           where ninja
-          cmake -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} -DCMAKE_MAKE_PROGRAM=ninja -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_FLAGS=-I"C:/Progra~1/OpenSSL/include" -DCMAKE_C_FLAGS=-I"C:/Progra~1/OpenSSL/include" .
+          cmake -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} -DCMAKE_MAKE_PROGRAM=ninja -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_FLAGS=-I"C:/Progra~1/OpenSSL/include" -DCMAKE_C_FLAGS=-I"C:/Progra~1/OpenSSL/include" -DCMAKE_EXE_LINKER_FLAGS=-L"C:/Progra~1/OpenSSL/lib" .
           ninja 
 
     - name: cpack
