fix command for snap

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -23,6 +23,6 @@
 
   apps:
     v4l2rtspserver:
-      command: usr/local/bin/rtsp2ws -b $SNAP/usr/local/share/rtsp2ws/
+      command: usr/local/bin/rtsp2ws -p $SNAP/usr/local/share/rtsp2ws/
       daemon: simple   
       plugs: [network-bind]
