--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,8 @@ target_link_libraries (${PROJECT_NAME} cxxopts)
 
 # install
 install (TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
-install (DIRECTORY html/ DESTINATION share/${PROJECT_NAME})
+install (DIRECTORY www DESTINATION share/${PROJECT_NAME})
+install (FILES config.json DESTINATION share/${PROJECT_NAME})
 
 SET(CPACK_GENERATOR "TGZ")
 SET(CPACK_SYSTEM_NAME ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}-${CMAKE_BUILD_TYPE})
