try to use config file with snap

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -21,8 +21,15 @@
       stage-packages:
       - libssl3      
 
+    local-parts:
+      plugin: dump
+      source: ./config.json
+      source-type: local
+
   apps:
     rtsp2ws:
-      command: usr/local/bin/rtsp2ws -p $SNAP/usr/local/share/rtsp2ws/www -C $SNAP/usr/local/share/rtsp2ws/config.json
+      command: usr/local/bin/rtsp2ws -p $SNAP/usr/local/share/rtsp2ws/www -C $HOME/config.json
       daemon: simple   
-      plugs: [network-bind]
+      plugs: 
+      - network-bind
+      - home
