--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -8,7 +8,7 @@
 
   grade: stable 
   confinement: strict
-  license: The Unlicense
+  license: Unlicense
   contact: michel.promonet@free.fr
 
   parts:
