--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -23,14 +23,9 @@
       stage-packages:
       - libssl3      
 
-    local-parts:
-      plugin: dump
-      source: ./local
-      source-type: local
-
   apps:
     rtsp2ws:
-      command: usr/local/bin/rtsp2ws -p $SNAP/usr/local/share/rtsp2ws/www -C $HOME/config.json
+      command: usr/local/bin/rtsp2ws -p $SNAP/usr/local/share/rtsp2ws/www -C $SNAP_USER_DATA/config.json
       daemon: simple   
       plugs: 
       - network-bind
