--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -17,8 +17,13 @@ jobs:
         username: ${{ github.actor }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
+    - name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+        
     - name: Set up Docker Buildx
-      uses: docker/setup-buildx-action@v2
+      uses: docker/setup-buildx-action@v3
+      with:
+        platforms: linux/amd64,linux/arm64
 
     - name: Build and push
       uses: docker/build-push-action@v4
@@ -26,3 +31,4 @@ jobs:
         context: .
         push: true
         tags: ghcr.io/${{ github.repository }}:latest 
+        platforms: linux/amd64,linux/arm64
