--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -23,7 +23,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
 
     - name: Build and push
       uses: docker/build-push-action@v4
@@ -31,4 +31,5 @@ jobs:
         context: .
         push: true
         tags: ghcr.io/${{ github.repository }}:latest 
-        platforms: linux/amd64,linux/arm64
+        platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
+
