--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -23,13 +23,13 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
-        platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
+        platforms: linux/amd64,linux/arm64,linux/arm/v7
 
     - name: Build and push
-      uses: docker/build-push-action@v4
+      uses: docker/build-push-action@v5
       with:
         context: .
         push: true
         tags: ghcr.io/${{ github.repository }}:latest 
-        platforms: linux/amd64,linux/arm64,linux/arm/v6,linux/arm/v7
+        platforms: linux/amd64,linux/arm64,linux/arm/v7
 
