--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -60,7 +60,7 @@ jobs:
     - name: cpack 
       run: | 
           cpack
-          echo "artifactPath=$(ls *.tar.gz)" >> $GITHUB_ENV
+          echo "artifactPath=$(ls *.tar.gz | grep -v live555)" >> $GITHUB_ENV
 
     - uses: actions/upload-artifact@v4
       with:
