--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,6 +34,7 @@ target_link_libraries (${PROJECT_NAME} cxxopts)
 install (TARGETS ${PROJECT_NAME} RUNTIME DESTINATION bin)
 install (DIRECTORY www DESTINATION share/${PROJECT_NAME})
 install (FILES config.json DESTINATION share/${PROJECT_NAME})
+install (FILES keycert.pem DESTINATION share/${PROJECT_NAME})
 
 SET(CPACK_GENERATOR "TGZ")
 SET(CPACK_SYSTEM_NAME ${CMAKE_SYSTEM_NAME}-${CMAKE_SYSTEM_PROCESSOR}-${CMAKE_BUILD_TYPE})
