try to update github build image

--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -42,7 +42,7 @@ jobs:
           system: riscv64
           crosscompiler: riscv64-linux-gnu
           
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     
     steps:
     - uses: actions/checkout@v4
