--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -5,6 +5,12 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      packages: write
+      contents: read
+      attestations: write
+      
     steps:
     - uses: actions/checkout@v4
       with:
@@ -27,9 +33,16 @@ jobs:
 
     - name: Build and push
       uses: docker/build-push-action@v5
+      id: push
       with:
         context: .
         push: true
         tags: ghcr.io/${{ github.repository }}:latest 
         platforms: linux/amd64,linux/arm64,linux/arm/v7
 
+    - name: Attest
+      uses: actions/attest-build-provenance@v1
+      with:
+          subject-name: ghcr.io/${{ github.repository }}
+          subject-digest: ${{ steps.push.outputs.digest }}
+          push-to-registry: true
