--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -29,16 +29,16 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
 
     - name: Build and push
-      uses: docker/build-push-action@v5
+      uses: docker/build-push-action@v6
       id: push
       with:
         context: .
         push: true
         tags: ghcr.io/${{ github.repository }}:latest 
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
 
     - name: Attest
       uses: actions/attest-build-provenance@v1
