--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -29,7 +29,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
-        platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+        platforms: linux/amd64,linux/arm64,linux/arm/v7
 
     - name: Build and push
       uses: docker/build-push-action@v6
@@ -38,7 +38,7 @@ jobs:
         context: .
         push: true
         tags: ghcr.io/${{ github.repository }}:latest 
-        platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6
+        platforms: linux/amd64,linux/arm64,linux/arm/v7
 
     - name: Attest
       uses: actions/attest-build-provenance@v1
