--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -16,6 +16,14 @@ jobs:
       with:
         fetch-depth: 0
 
+    - name: Extract metadata (tags, labels) for Docker
+      id: meta
+      uses: docker/metadata-action@v5
+      with:
+        images: ghcr.io/${{ github.repository }}
+        tags: |
+          type=ref,event=branch
+            
     - name: Login to GitHub Container Registry
       uses: docker/login-action@v2
       with:
@@ -37,7 +45,7 @@ jobs:
       with:
         context: .
         push: true
-        tags: ghcr.io/${{ github.repository }}:latest 
+        tags: ${{ steps.meta.outputs.tags }} 
         platforms: linux/amd64,linux/arm64,linux/arm/v7
 
     - name: Attest
