--- a/.github/workflows/cpp-linux.yml
+++ b/.github/workflows/cpp-linux.yml
@@ -6,7 +6,7 @@ jobs:
   build:
     permissions:
       id-token: write
-      contents: read
+      contents: write
       attestations: write
       
     strategy:
