--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -35,7 +35,7 @@ jobs:
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
       with:
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/riscv64
 
     - name: Build and push
       uses: docker/build-push-action@v6
@@ -44,7 +44,7 @@ jobs:
         context: .
         push: true
         tags: ${{ steps.meta.outputs.tags }} 
-        platforms: linux/amd64,linux/arm64,linux/arm/v7
+        platforms: linux/amd64,linux/arm64,linux/arm/v7,linux/riscv64
 
     - name: Attest
       uses: actions/attest-build-provenance@v1
