--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -33,6 +33,7 @@ jobs:
       uses: docker/setup-qemu-action@v3
         
     - name: Set up Docker Buildx
+      id: setup
       uses: docker/setup-buildx-action@v3
 
     - name: Build and push
@@ -41,7 +42,7 @@ jobs:
       with:
         push: true
         tags: ${{ steps.meta.outputs.tags }} 
-        platforms: linux/amd64, linux/arm64, linux/riscv64, linux/ppc64le, linux/s390x, linux/386, linux/mips64le, linux/arm/v7, linux/arm/v6
+        platforms: ${{ steps.setup.outputs.platforms }}
 
     - name: Attest
       uses: actions/attest-build-provenance@v1
