--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -13,8 +13,7 @@ jobs:
       
     steps:
     - uses: actions/checkout@v4
-      with:
-        fetch-depth: 0
+    - run: git fetch --prune --unshallow --tags
 
     - name: Extract metadata (tags, labels) for Docker
       id: meta
