--- a/.github/workflows/cpp-linux.yml
+++ b/.github/workflows/cpp-linux.yml
@@ -17,6 +17,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+    - run: git fetch --prune --unshallow --tags    
 
     - name: pkg
       run: | 
