--- a/.github/workflows/cross.yml
+++ b/.github/workflows/cross.yml
@@ -46,6 +46,7 @@ jobs:
     
     steps:
     - uses: actions/checkout@v4
+    - run: git fetch --prune --unshallow --tags    
 
     - name: pkg
       run: | 
