--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -35,6 +35,15 @@ jobs:
       id: setup
       uses: docker/setup-buildx-action@v3
 
+    - name: Build and push devcontainer
+      uses: docker/build-push-action@v6
+      with:
+        context: .
+        push: true
+        target: builder
+        platforms: linux/amd64
+        tags: ${{ steps.meta.outputs.tags }}-dev 
+
     - name: Build and push
       uses: docker/build-push-action@v6
       id: push
