--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -59,15 +59,15 @@ jobs:
           subject-digest: ${{ steps.push.outputs.digest }}
           push-to-registry: true
 
-    - name: Log in to Azure
-      uses: azure/login@v1
-      with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}
+#    - name: Log in to Azure
+#      uses: azure/login@v1
+#      with:
+#        creds: ${{ secrets.AZURE_CREDENTIALS }}
 
-    - name: Build and deploy Container App
-      uses: azure/container-apps-deploy-action@v2
-      with:
-        imageToDeploy: ghcr.io/${{ github.repository }}:latest
-        containerAppName: rtsp2web
-        resourceGroup: deploy
-        targetPort: 8080
+#    - name: Build and deploy Container App
+#      uses: azure/container-apps-deploy-action@v2
+#      with:
+#        imageToDeploy: ghcr.io/${{ github.repository }}:latest
+#        containerAppName: rtsp2web
+#        resourceGroup: deploy
+#        targetPort: 8080
