Enhance OpenSSL location steps in workflow
Added commands to locate OpenSSL and Chocolatey in the workflow.

--- a/.github/workflows/cpp-windows.yml
+++ b/.github/workflows/cpp-windows.yml
@@ -15,8 +15,13 @@ jobs:
     
     steps:
     - name: Locate OpenSSL 
+      shell: cmd
       run: | 
-        where openssl 
+        env
+        where openssl
+        where choco
+        choco list
+        dir "C:\Program Files\OpenSSL"
         dir "C:\Program Files\OpenSSL-Win64\bin" 
         dir C:\Windows\System32\libssl-*.dl
     
