Add OpenSSL_ROOT_DIR to cpp-windows workflow
Set OPENSSL_ROOT_DIR environment variable for OpenSSL.

--- a/.github/workflows/cpp-windows.yml
+++ b/.github/workflows/cpp-windows.yml
@@ -9,7 +9,10 @@ jobs:
         buildtype: [Debug, Release]
 
     runs-on: windows-latest
-        
+
+    env:
+      OPENSSL_ROOT_DIR: 'C:\Program Files\OpenSSL-Win64'
+      
     steps:
     - name: Locate OpenSSL 
       shell: cmd
