Modify CMake build process in cpp-windows.yml

--- a/.github/workflows/cpp-windows.yml
+++ b/.github/workflows/cpp-windows.yml
@@ -23,9 +23,8 @@ jobs:
       shell: cmd
       run: |
           set
-          where ninja
-          cmake -G Ninja -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} -DCMAKE_MAKE_PROGRAM=ninja -DCMAKE_CXX_COMPILER=clang++ -DCMAKE_C_COMPILER=clang .
-          ninja 
+          cmake -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} .
+          cmake --build .
 
     - name: cpack
       shell: bash
