set build-type for cmake --build

--- a/.github/workflows/cpp-windows.yml
+++ b/.github/workflows/cpp-windows.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
           set
           cmake -DCMAKE_BUILD_TYPE=${{ matrix.buildtype }} .
-          cmake --build --config ${{ matrix.buildtype }} .
+          cmake --build . --config ${{ matrix.buildtype }}
 
     - name: cpack
       shell: bash
