--- a/config.json
+++ b/config.json
@@ -13,8 +13,14 @@
 
         "Orlando": {"video":"rtsp://97.68.104.34/axis-media/media.amp", "position":"28.538340,-81.379240"},
 
-        "Torino": {"video":"rtsp://194.116.11.176/axis-media/media.amp", "position":"45.070490,7.686820"}
+        "Torino": {"video":"rtsp://194.116.11.176/axis-media/media.amp", "position":"45.070490,7.686820"},
         
-        
+        "Romania": {"video":"rtsp://5.15.64.147/11"},
+        "Nagoya": {"video":"rtsp://124.255.28.231/11"},
+        "Long Beach": {"video":"rtsp://47.180.53.132/11"},
+        "Tramandai": {"video":"rtsp://179.127.151.69/11"},
+        "Thessaloníki": {"video":"rtsp://141.237.109.92/11"},
+        "Cần Giuộc": {"video":"rtsp://171.226.116.18/11"}
+
     }
 }
